--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@danielthurau/atlas-labs-codex",
-  "version": "0.1.0",
+  "version": "0.2.0",
   "description": "Personal design system with React components, CSS tokens, and utilities",
   "author": "thurau",
   "license": "MIT",
@@ -31,6 +31,7 @@
       "import": "./lib/index.ts",
       "types": "./lib/index.ts"
     },
+    "./themes/css/reset.css": "./themes/css/reset.css",
     "./themes/css/base.css": "./themes/css/base.css",
     "./themes/css/theme-light.css": "./themes/css/theme-light.css",
     "./themes/css/theme-dark.css": "./themes/css/theme-dark.css"
@@ -52,9 +53,13 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
+    "lint:fix": "next lint --fix",
+    "format": "prettier --write .",
+    "format:check": "prettier --check .",
+    "check": "npm run lint && npm run format:check",
     "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build",
-    "prepublishOnly": "echo 'Ready to publish!'"
+    "prepublishOnly": "npm run check && echo 'Ready to publish!'"
   },
   "peerDependencies": {
     "react": "^18.0.0",
@@ -89,6 +94,7 @@
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "storybook": "^8.4.7",
+    "prettier": "^3.4.2",
     "typescript": "^5.7.2",
     "vite": "^5.4.0"
   }
